# ffmpeg_demo

./: CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
inc/: customexceptions.h  errors.h  essentials.h  videofilesession.h
src/: customexceptions.cpp  main.cpp
